# Factor-Crowding-

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_ARCHITECTURE.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.md  EXPLANATION.md  Makefile  README.md  RESULTS_SUMMARY.md  pdd.md  pyproject.toml
docs/: CODE_WALKTHROUGH.md  INDEX.md  QUICK_REFERENCE.md  SYSTEM_DIAGRAM.txt  design.md
factor_crowding/: __init__.py  cli.py  config.py
factor_crowding/analysis/: __init__.py  drawdowns.py
factor_crowding/data/: __init__.py  clean.py  download.py
factor_crowding/features/: __init__.py  crowding.py
factor_crowding/models/: __init__.py  predict.py
factor_crowding/report/: __init__.py  figures.py
factor_crowding/utils/: __init__.py
tests/: conftest.py  test_clean.py  test_config.py  test_crowding.py  test_drawdowns.py  test_predict.py
